fix vertical-align icons position

--- a/styles/elements/_buttons.scss
+++ b/styles/elements/_buttons.scss
@@ -31,6 +31,7 @@ Styleguide #{$sgi-buttons}
     img {
       width: 16px;
       height: 16px;
+      margin-top: -4px;
       margin-right: 12px;
       vertical-align: middle;
     }
@@ -226,6 +227,12 @@ Styleguide #{$sgi-buttons-size}
     padding: 0 10px;
     height: 30px;
     line-height: 29px;
+
+    img {
+      width: 12px;
+      height: 12px;
+      margin-right: 5px;
+    }
 }
 
 .btn {
